fixed spacing

--- a/_lib/solid-helpers/_variables.scss
+++ b/_lib/solid-helpers/_variables.scss
@@ -79,9 +79,9 @@ $fill-snapchat:  #fffc00 !default;
 
 // Type Colors
 $text-white:           #fff    !default;
-$text-gray:            #222222 !default;
-$text-gray-lighter:    #666666 !default;
-$text-gray-lightest:   #999999 !default;
+$text-gray:            #222    !default;
+$text-gray-lighter:    #666    !default;
+$text-gray-lightest:   #999    !default;
 $text-red:             #e32    !default;
 $text-pink:            #f43192 !default;
 $text-orange:          #f47f16 !default;
